change remote repo and implements api persons
