# docs/swagger.yaml
@@ -392,13 +392,15 @@ definitions:
     type: object
   users.requestValidateIdentity:
     properties:
-      confirm_encode:
-        type: string
       country:
         type: string
-      identity_encode:
+      document_back_img:
+        type: string
+      document_front_img:
         type: string
       identity_number:
+        type: string
+      selfie_img:
         type: string
     type: object
   users.responseCreateUser:
